new file:   .gitignore 	new file:   AlterConf.cpp 	modified:   DataProcess.cpp 	modified:   Gateway.cpp 	modified:   Gateway.h 	modified:   InitDaemo.cpp 	modified:   Log.cpp 	modified:   Log.h 	modified:   Makefile 	modified:   MyService.cpp 	new file:   README 	modified:   Server.cpp 	modified:   UdpServer.cpp 	modified:   WriteCmd.cpp 	modified:   config/init.conf 	modified:   debug.h 	modified:   main.cpp 	modified:   main.h 	modified:   pgdb.cpp 	modified:   work.hpp 	deleted:    AlertConf.cpp 	deleted:    MySocket.cpp 	deleted:    MySocket.h 	deleted:    log.cpp 	deleted:    log.h 	收数软件中使用了新Log4cplus日志库，删除了原来的log.cpp log.h 	运行收数软件sudo ./recv-data-platform -d/D 开启调试模式， 				sudo ./recv-data-platform 开启守护进程模式 	windows变同 	版本v2.0.02     作者：王鹤楼     日期：2015-01-26

--- a/config/init.conf
+++ b/config/init.conf
@@ -1,11 +1,13 @@
 # DataBase configure file
+[log]
+LOG_LEVEL = 0
 [db]
 DB_ADDR = 127.0.0.1
 DB_PORT = 5432
-DB_NAME = gatewaydata
-DB_USER = postgres
-DB_PWD = DbP12730()!@#$
-SERVER_IP=202.85.216.67
+DB_NAME = gateway_db
+DB_USER = whl
+DB_PWD = whllinux
+SERVER_IP=192.168.0.231
 TCP_PORT=502
 UDP_PORT=8000
 RECORD_CHANNEL_NUM_FLAG=0
