modified:   .gitignore modified:   Gateway.h modified:   Log.cpp modified:   Log.h modified:   Makefile modified:   main.cpp 主要功能没有变, 1、Gateway.h中去掉了宏 LIGHTSYS 2、Log.h中去掉了宏 PROGNAME 3、main.cpp中修改了: NOTICE("收数软件"<< RECVD_TYPE << RECVD_VERSION << "启动成功！"); 4、在Makefile增加了宏定义LIGHTSYS 、 PROGNAME、RECVD_TYPE、RECVD_VERSION 以后只在Makeifle中指定APP的名字就可以分别编译出标准版的收数软件和照明系统 软件 5、注意如果在同一台机器上同时运行标准版软件和照明版软件 ,一定要在配置文件 中指定不同的tcp和udp端口号！ 版本：v2.0.09 作者：王鹤楼 日期：2015/08/19

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,6 @@
-AlterConf.o
-DataProcess.o
-Gateway.o
-IniFile.o
-InitDaemo.o
-io_service_pool.o
-Log.o
-main.o
-MyService.o
-pgdb.o
-Server.o
-UdpServer.o
-WriteCmd.o
+*.o
 tags
+/config
 /log
 recv-data-platform
-Makefile
+lightsysd
